@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.4363 2004/01/05 22:00:38 xtraeme Exp $
+$NetBSD: CHANGES,v 1.4364 2004/01/05 22:11:15 hubertf Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -67,3 +67,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated gd to 2.0.17 [adam 2004-01-05]
 	Updated sablotron to 1.0.1 [wiz 2004-01-05]
 	Updated file-roller to 2.4.2 [xtraeme 2004-01-05]
+	Updated spamprobe to 0.9e [hubertf 2004-01-05]
